--- a/styles/partials/main.css
+++ b/styles/partials/main.css
@@ -1109,13 +1109,15 @@ li {
     font-size: 20px;
   }
 }
+.post .image-wrapper {
+  padding: 32px 0;
+}
 @media screen and (min-width: 768px) {
   .post .image-wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(150px, auto);
     grid-gap: 16px;
-    padding: 32px 0;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1124,6 +1126,8 @@ li {
   }
 }
 .post .figure-caption {
+  margin-top: 8px;
+  font-size: 15px;
   color: #059c66;
 }
 .post .referential-links {
